Fix focus indicator overflow on sidebar

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -57,6 +57,14 @@ html.tna-template
   }
 
   &__sidebar-items {
+    width: 100%;
+    margin: 0;
+    padding: spacing.space(0.5);
+
+    box-sizing: content-box;
+    position: relative;
+    left: -#{spacing.space(0.5)};
+
     flex: 1;
 
     overflow-y: auto;
@@ -306,6 +314,11 @@ html.tna-template
     @include colour.colour-background("background-tint");
 
     @include colour.colour-border("accent-background", 0.375rem, solid, left);
+  }
+
+  @include media.on-medium {
+    margin-right: spacing.space(2);
+    margin-left: spacing.space(2);
   }
 
   @include media.on-mobile {
